force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>A &quot;Payment Schedule&quot; object outlines the timing and details of financial transactions within a real estate deal, specifying due dates, amounts, and parties involved. It ensures organized and timely payment execution, promoting financial transparency in real estate transactions.</description>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Payment Schedule RecordID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>