force-app/main/default/objects/Payment_Schedule__c/fields/Amortization__c.field-meta.xml
<CustomField>
    <fullName>Amortization__c</fullName>
    <label>Amortization</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>