force-app/main/default/objects/Payment_Schedule__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>