force-app/main/default/objects/Payment_Schedule__c/fields/Downpayment__c.field-meta.xml
<CustomField>
    <fullName>Downpayment__c</fullName>
    <label>Downpayment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>