force-app/main/default/objects/Payment_Schedule__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <label>Interest Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>