force-app/main/default/objects/Payment_Schedule__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>