force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>