force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Status__c</fullName>
    <label>Payment Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Un Paid</fullName>
            </value>
            <value>
                <fullName>Full Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>