force-app/main/default/objects/Payment_Schedule__c/fields/Total_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Balance__c</fullName>
    <label>Total Outstanding Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>